# auddyseus

./: Cargo.toml  LICENSE  README.md  install.sh
src/: app.rs  browser.rs  config.rs  m3u.rs  main.rs  player.rs  ui.rs
